- New Fields:
  + UNIHAN_FIELD_RADICAL_IS_SIMPLIFIED "radical_is_simplified" .
  + UNIHAN_FIELD_PINYIN_BASE "pinYin_base".
  + UNIHAN_FIELD_PINYIN_TONE "pinYin_tone".
- New functions:
  file_functions.h: lsDir().
  unihan.h: unihanDb_get_all_fields().
  unihan.h: unihanDb_get_all_pseudo_fields().
  unihan.h: unihanDb_get_all_real_fields().
  unihan.h: unihanDb_get_all_tables().

- Fixed:
  + unihan_find_firstMatched() is corrected as unihan_find_first_matched()
  + The field index kCheungBauer and kCheungBauerIndex are corrected.

- Changed Features:
  + All programs now use [-V number] instead of multiple V.

- Changed Fields:
  + UNIHAN_FIELD_KANGXI_PAGE "kangXi_page" is renamed as UNIHAN_FIELD_DICT_PAGE "dict_page"
  + UNIHAN_FIELD_KANGXI_CHARNUM "kangXi_charNum" is renamed as UNIHAN_FIELD_DICT_POSITION "dict_position"
  + UNIHAN_FIELD_KANGXI_VIRTUAL "kangXi_virtual" is renamed as UNIHAN_FIELD_DICT_POSITION "dict_virtual"


- Changed Functions:
  + The behavior of unihanDb_open_default() and unihan_open() has changed:
    now unihanDb_open() opens the user-defined cache and the db it mentions;
    while unihanDb_open_default() opens the system cache and the db it mentions.
  + unihanChar_has_property() is renamed as unihanChar_has_field()
  + unihanField_get_table() is renamed as unihanField_get_preferred_table()
  + Argument const_count in stringList_sized_new() is removed.

- Removed:
  + No more UNIHAN_DEFAULT_DB
  + UNIHAN_FIELD_VARIANT_TYPE is removed.

* Tue Oct 21 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.3-3
- Add following make targets: rpm_lint, koji_submit, koji_build,  pkg_remove_old.


* Mon Oct 20 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.3-0
- New Features:
  collection.h, file_function.h and verboseMsg.h is in API.
- Fixed:
  Missing documents in 0.5.2
- Changed:
  + collection.h: 
    - G_ARRAY_COPY is renamed as G_ARRAY_CONCAT to reflect its real functionality.