@@ -549,29 +549,20 @@ gboolean unihanField_is_indexed(UnihanField field);
  */
 gboolean unihanField_is_integer(UnihanField field);
 
+
 /**
- * Whether the case of value should be kept.
+ * Whether the value in the field is stored as uppercase.
  *
- * Usually, the Unihan tag values are stored as uppercase, such as
+ * Some Unihan tag values are always stored as uppercase, such as
  * \c UNIHAN_FIELD_KMANDARIN, \c UNIHAN_FIELD_PINYIN.
  *
- * However, there are exceptions such as field \c UNIHAN_FIELD_KCANTONESE 
- * which always stores as lowercase; 
- * while field \c UNIHAN_FIELD_KDEFINITION the other hand, may have uppercase
- * and lowercase characters.
- * 
- * Integer fields need not change case, however, as UCS-4 can have 'U+xxxxx'
- * form, UCS-4 should be convert to uppercase.
- *
- * This function returns \c TRUE if the case of field value need not be changed,
- * as with \c UNIHAN_FIELD_KDEFINITION; \c FALSE otherwise.
  *
  * @param field the UnihanField
- * @return TRUE if the case of field value should not be changed; FALSE otherwise.
- * @see unihanField_is_ucs4()
+ * @return TRUE if the value of field is stored as lowercase; FALSE otherwise.
  * @see unihanField_is_lowercase()
  */
-gboolean unihanField_is_case_no_change(UnihanField field);
+
+gboolean unihanField_is_uppercase(UnihanField field);
 
 /**
  * Whether the value in the field is stored as lowercase.
@@ -586,7 +577,7 @@ gboolean unihanField_is_case_no_change(UnihanField field);
  *
  * @param field the UnihanField
  * @return TRUE if the value of field is stored as lowercase; FALSE otherwise.
- * @see unihanField_is_case_no_change()
+ * @see unihanField_is_uppercase()
  */
 gboolean unihanField_is_lowercase(UnihanField field);
 
