@@ -396,7 +396,7 @@ const UnihanField UNIHAN_UPPERCASE_FIELDS[]={
     UNIHAN_FIELD_SCALAR_VALUE,
 
     UNIHAN_INVALID_FIELD
-}
+};
 
 
 
